Fix overflow

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,9 @@
 
 .chat {
     font-family: 'Gill Sans, sans-seri';
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 a:link, a:visited, a:hover, a:active{
